chore(gitignore): 更新数据库相关文件的忽略规则
- 注释掉 *.sql 文件的忽略规则
- 添加 *.schema.sql 架构定义文件的保留规则
- 添加 *.init.sql 初始化文件的保留规则

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ target/
 # 数据库项目额外忽略（可选）
 # ==========================
 # 本地导出的 SQL 文件（如手动备份、测试数据）
-*.sql
+#*.sql
 !*.schema.sql  # 保留架构定义的 SQL（按需取消注释）
 !*.init.sql    # 保留初始化 SQL（按需取消注释）
 # 数据文件
